--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,13 @@
 ﻿{
   "manifest_version": 2,
   "name": "GfyFetcher",
-  "description": "This extension allows you to right click on gif links and open them as HTML5 video gfys via Gfycat.",
-  "version": "0.1.2",
+  "description": "This extension allows you to right click on gifs or links and open them as HTML5 videos via Gfycat.",
+  "version": "0.1.3",
   "background": { 
     "page":"src/bg.html"
     },
   "permissions": [
-    "contextMenus",
-    "tabs"
+    "contextMenus"
   ],
   "content_security_policy": "default-src 'self'",
   "icons": {
